--- a/page2.html
+++ b/page2.html
@@ -140,7 +140,7 @@
 	</div>
     	<div class="card">
 	    <div class="pic">
-		    <a href= page4.html><img src="img/elec1.jpg" alt="Изображение" width="180" height="190" class="img2"></a>
+		    <a href= page4.html><img src="img/elec1.png" alt="Изображение" width="180" height="190" class="img2"></a>
 	    </div>
 		<div class="cardname">
 		    <h4 class="nopad">Электрический грызун</h4>
@@ -323,4 +323,5 @@
 	
 	<script src="scripts/script.js"></script>
 	</body>
+
 </html>
