--- a/page4.html
+++ b/page4.html
@@ -70,28 +70,28 @@
 	<li data-target="#slides" data-slide-to="7"></li>
 	</ul>
     <div class="carousel-item active">
-      <img class="d-block w-100 " src="img/elec1.jpg" alt="1">
+      <img class="d-block w-100 " src="img/elec1.png" alt="1">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/elec2.jpg" alt="2">
+      <img class="d-block w-100" src="img/elec2.png" alt="2">
     </div>
     <div class="carousel-item">
-      <img class="d-block w-100" src="img/elec3.jpg" alt="3">
+      <img class="d-block w-100" src="img/elec3.png" alt="3">
     </div>
 	    <div class="carousel-item">
-      <img class="d-block w-100" src="img/elec4.jpg" alt="4">
+      <img class="d-block w-100" src="img/elec4.png" alt="4">
     </div>
 	    <div class="carousel-item">
-      <img class="d-block w-100" src="img/elec5.jpg" alt="5">
+      <img class="d-block w-100" src="img/elec5.png" alt="5">
     </div>
 	    <div class="carousel-item">
-      <img class="d-block w-100" src="img/elec6.jpg" alt="6">
+      <img class="d-block w-100" src="img/elec6.png" alt="6">
     </div>
 	    <div class="carousel-item">
-      <img class="d-block w-100" src="img/elec7.jpg" alt="7">
+      <img class="d-block w-100" src="img/elec7.png" alt="7">
     </div>
 	    <div class="carousel-item">
-      <img class="d-block w-100" src="img/elec8.jpg" alt="8">
+      <img class="d-block w-100" src="img/elec8.png" alt="8">
     </div>
 	</div>
     </div>
@@ -222,4 +222,5 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
 	</body>
+
 </html>
